After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677200 - Race condition: misbehaves when launched twice in quick succession
Race condition: misbehaves when launched twice in quick succession
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: general
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
: 677201 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-05-31 15:17 UTC by Jeremy Nickurak
Modified: 2012-06-04 20:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jeremy Nickurak 2012-05-31 15:17:11 UTC
To duplicate:
1) eog image1.jpg & eog image2.jpg &

Expected behavior:
- 2 eog instances open, once with each image
  -- or --
- 1 eog instance opens, with both images open

Observed behavior:
- 1 eog instance opens, with 1 image open.

Workaround that indicates it's a race condition:


eog image1.jpg & sleep 5 & eog image2.jpg &
Comment 1 Felix Riemann 2012-06-01 18:25:24 UTC
*** Bug 677201 has been marked as a duplicate of this bug. ***
Comment 2 Felix Riemann 2012-06-04 19:34:33 UTC
Hmm, this will be hard to debug.
Comment 3 Felix Riemann 2012-06-04 20:03:42 UTC
Or not. :)

commit 92c37ff6b34a2866ba2d03be7f6e1e973c707419
Author: Felix Riemann <>
Date:   Mon Jun 4 21:55:29 2012 +0200

    Make sure to only reuse an empty window if it is done initializing
    
    This avoids a race condition when opening images through multiple instances.
    The second instance could then override the already loading (hidden)
    window's image resulting in only one image window showing.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=677200
---
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.