Make sure to only reuse an empty window if it is done initializing

This avoids a race condition when opening images through multiple instances.
The second instance could then override the already loading (hidden)
window's image resulting in only one image window showing.

https://bugzilla.gnome.org/show_bug.cgi?id=677200